--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ p {
 
 /* Additions */
 .button {
-    border: lightgrey;
-    color: lightgrey;
+    border-color: lightgrey;
+    color: grey;
     background-color: white;
     text-align: center;
 }
@@ -59,11 +59,12 @@ p {
 }
 
 .circle{
-    right: 8px;
-    height: 25px;
-    width: 25px;
+    float: right;
+    height: 30px;
+    width: 30px;
     background-color: transparent;
     border-style: solid;
+    border-width: 1px;
     border-color: black;
     border-radius: 50%;
     display: inline-block;
